# Voxeland

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
bonxai_core/benchmark/: benchmark_bonxai.cpp
bonxai_core/include/bonxai/: bonxai.hpp  serialization.hpp
bonxai_map/: CMakeLists.txt
bonxai_map/benchmark/: benchmark_kitti.cpp  benchmark_pointcloud.cpp
bonxai_map/include/bonxai_map/: cell_types.hpp  dirichlet.hpp  logging.hpp  pcl_utils.hpp  probabilistic_map.hpp  probabilistic_map_rgb.hpp  probabilistic_map_templated.hpp  semantics.hpp
bonxai_map/src/: pcl_utils.cpp  probabilistic_map_rgb.cpp  semantics.cpp
bonxai_ros/include/: bonxai_server.hpp  semantics_ros_wrapper.hpp
bonxai_ros/launch/: bonxai_mapping.launch.xml
bonxai_ros/params/: bonxai_params.yaml
bonxai_ros/src/: bonxai_server.cpp
voxeland/: CMakeLists.txt  package.xml
voxeland/bonxai_core/benchmark/: benchmark_compression.cpp
voxeland/bonxai_core/include/bonxai/: bonxai.hpp
voxeland/include/: semantics_ros_wrapper.hpp  voxeland_server.hpp
voxeland/launch/: bonxai_mapping.launch.py  bonxai_mapping.launch.xml
voxeland/msg/: ClassDistribution.msg
voxeland/src/: voxeland_server.cpp
voxeland/voxeland/include/: appearances_classifier.hpp  json_semantics.hpp  lvlm_processing.hpp  semantics_ros_wrapper.hpp  voxeland_desambiguation.hpp  voxeland_disambiguation.hpp  voxeland_server.hpp
voxeland/voxeland/include/disambiguation/: disambiguation_context.hpp  json_semantics.hpp  prompt_utils.hpp  voxeland_disambiguation.hpp
voxeland/voxeland/include/disambiguation/appearances_classifier/: appearances_classifier.hpp  classifier_factory.hpp
voxeland/voxeland/include/disambiguation/pipeline/: interface_pipeline_step.hpp  pipeline_steps.hpp
voxeland/voxeland/launch/: voxeland_disambiguation.launch.xml  voxeland_server.launch.py
voxeland/voxeland/params/: bonxai_params.yaml  prompt.txt
voxeland/voxeland/src/: appearances_classifier.cpp  json_semantics.cpp  voxeland_desambiguation.cpp  voxeland_disambiguation.cpp  voxeland_server.cpp
voxeland/voxeland/src/disambiguation/: disambiguation_context.cpp  json_semantics.cpp  voxeland_disambiguation.cpp
voxeland/voxeland/src/disambiguation/appearances_classifier/: classifier_factory.cpp  random_classifier.cpp  split_classifier.cpp
voxeland/voxeland/src/disambiguation/pipeline/: abstract_pipeline_step.cpp  appearances_selection_step.cpp  image_bag_reading.cpp  json_deserialization_step.cpp  json_serialization_step.cpp  lvlm_disambiguation_step.cpp  metrics_save_step.cpp  uncertain_instance_identification_step.cpp  uncertain_results_update_step.cpp
voxeland/voxeland/srv/: GetClassDistributions.srv
voxeland/voxeland/test/disambiguation/: test_json_deserialization_step.cpp  test_json_semantics.cpp  test_json_serialization_step.cpp  test_metrics_step.cpp  test_uncertain_instance_identification_step.cpp  test_uncertain_results_update_step.cpp
voxeland/voxeland_map/include/voxeland_map/: cell_types.hpp  dirichlet.hpp  logging.hpp  pcl_utils.hpp  probabilistic_map.hpp  probabilistic_map_templated.hpp  semantics.hpp
voxeland/voxeland_map/include/voxeland_map/Utils/: Math.hpp  Stopwatch.hpp  logging.hpp
voxeland/voxeland_map/include/voxeland_map/cell_types/: Color.hpp  Common.hpp  Empty.hpp  RGBSemantics.hpp  Semantics.hpp  SemanticsInstances.hpp
voxeland/voxeland_map/src/: pcl_utils.cpp  semantics.cpp
voxeland_disambiguation/: CMakeLists.txt  package.xml
voxeland_disambiguation/include/disambiguation/: disambiguation_context.hpp  prompt_utils.hpp  voxeland_disambiguation.hpp
voxeland_disambiguation/include/disambiguation/appearances_classifier/: appearances_classifier.hpp  classifier_factory.hpp
voxeland_disambiguation/include/disambiguation/pipeline/: pipeline_steps.hpp
voxeland_disambiguation/launch/: disambiguation_test.launch.xml  voxeland_disambiguation.launch.xml
voxeland_disambiguation/src/disambiguation/: disambiguation_context.cpp  json_semantics.cpp  voxeland_disambiguation.cpp
voxeland_disambiguation/src/disambiguation/appearances_classifier/: bbox_classifier.cpp  classifier_factory.cpp  random_classifier.cpp  split_bbox_classifier.cpp  split_classifier.cpp
voxeland_disambiguation/src/disambiguation/pipeline/: abstract_pipeline_step.cpp  appearances_selection_step.cpp  image_bag_reading.cpp  json_deserialization_step.cpp  json_serialization_step.cpp  lvlm_disambiguation_step.cpp  metrics_save_step.cpp  uncertain_instance_identification_step.cpp  uncertain_results_update_step.cpp
voxeland_disambiguation/test/disambiguation/: test_json_deserialization_step.cpp  test_json_semantics.cpp  test_metrics_step.cpp  test_uncertain_instance_identification_step.cpp  test_uncertain_results_update_step.cpp
voxeland_disambiguation/test/disambiguation/appearances_classifier/: test_bbox_classifier.cpp  test_random_classifier.cpp  test_split_bbox_classifier.cpp  test_split_classifier.cpp
voxeland_map/: CMakeLists.txt
voxeland_map/include/voxeland_map/: cell_types.hpp  data_modes.hpp  dirichlet.hpp  logging.hpp  pcl_utils.hpp  probabilistic_map.hpp  probabilistic_map_templated.hpp  semantics.hpp
voxeland_map/include/voxeland_map/cell_types/: Color.hpp  Common.hpp  Empty.hpp  RGBSemantics.hpp  RGBSemanticsInstances.hpp  Semantics.hpp  SemanticsInstances.hpp
voxeland_map/src/: pcl_utils.cpp  semantics.cpp
voxeland_msgs/: CMakeLists.txt  package.xml
voxeland_msgs/srv/: UpdateMapResults.srv
