<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voxeland_disambiguation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="a@real.email">MAPIR</maintainer>
  <license>TODO: License declaration</license>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>segmentation_msgs</depend>
  <depend>voxeland_msgs</depend>
  <depend>voxeland</depend>
  <depend>ros_lm_interfaces</depend>
  <depend>message_filters</depend>
  <depend>std_srvs</depend>
  <depend>rosbag2_transport</depend>
  <depend>cv_bridge</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
